--- a/docs/basicCourse/操作系统.md
+++ b/docs/basicCourse/操作系统.md
@@ -38,7 +38,13 @@
 
 一个进程在用户态需要使用内核态的功能,进行系统调用进入内核态,由操作系统代完成
 
+##### 3.2用户态
 
+用户态运行的进程或可以直接读取用户程序的数据
+
+##### 3.3内核态
+
+可以简单的理解系统态运行的进程或程序几乎可以访问计算机的任何资源，不受限制
 
 ## 进程与线程
 
@@ -59,6 +65,8 @@
 ### 3.区别
 
 #### 1.拥有资源
+
+![image-20200904093913603](操作系统.assets/image-20200904093913603.png)
 
 进程是资源分配的基本单位，但是线程不拥有资源，线程可以访问隶属进程的资源。
 
@@ -730,3 +738,310 @@ int main()
 #### 6.socket
 
 网络通信
+
+
+
+
+
+## 死锁
+
+#### 必要条件
+
+- 互斥：每个资源要么已经分配给了一个进程，要么就是可用的。
+- 占有和等待：已经得到了某个资源的进程可以再请求新的资源。
+- 不可抢占：已经分配给一个进程的资源不能强制性地被抢占，它只能被占有它的进程显式地释放。
+- 环路等待：有两个或者两个以上的进程组成一条环路，该环路中的每个进程都在等待下一个进程所占有的资源。
+
+
+
+#### 处理方法
+
+##### 鸵鸟策略
+
+当什么也没发生
+
+
+
+##### 死锁检测与死锁恢复
+
+1.每种类型一个资源的死锁检测
+
+![image-20200903185545323](操作系统.assets/image-20200903185545323.png)
+
+检测有向图是否存在环路
+
+
+
+2.每种类型多个资源的死锁检测
+
+![image-20200903185626428](操作系统.assets/image-20200903185626428.png)
+
+上图中，有三个进程四个资源，每个数据代表的含义如下：
+
+- E 向量：资源总量
+- A 向量：资源剩余量
+- C 矩阵：每个进程所拥有的资源数量，每一行都代表一个进程拥有资源的数量
+- R 矩阵：每个进程请求的资源数量
+
+进程 P1 和 P2 所请求的资源都得不到满足，只有进程 P3 可以，让 P3 执行，之后释放 P3 拥有的资源，此时 A = (2 2 2 0)。P2 可以执行，执行后释放 P2 拥有的资源，A = (4 2 2 1) 。P1 也可以执行。所有进程都可以顺利执行，没有死锁。
+
+算法总结如下：
+
+每个进程最开始时都不被标记，执行过程有可能被标记。当算法结束时，任何没有被标记的进程都是死锁进程。
+
+1. 寻找一个没有标记的进程 Pi，它所请求的资源小于等于 A。
+2. 如果找到了这样一个进程，那么将 C 矩阵的第 i 行向量加到 A 中，标记该进程，并转回 1。
+3. 如果没有这样一个进程，算法终止。
+
+**找到第一个剩余资源无法满足的进程**
+
+##### 死锁预防
+
+破环死锁生成规则的任意一条即可
+
+**1. 破坏互斥条件**
+
+例如假脱机打印机技术允许若干个进程同时输出，唯一真正请求物理打印机的进程是打印机守护进程。
+
+**2. 破坏占有和等待条件**
+
+一种实现方式是规定所有进程在开始执行前请求所需要的全部资源。
+
+**3. 破坏不可抢占条件**
+
+**4. 破坏环路等待**
+
+给资源统一编号，进程只能按编号顺序来请求资源。
+
+
+
+##### **死锁避免**
+
+银行家算法
+
+![image-20200903222351242](操作系统.assets/image-20200903222351242.png)
+
+检查一个状态是否安全的算法如下：
+
+- 查找右边的矩阵是否存在一行小于等于向量 A。如果不存在这样的行，那么系统将会发生死锁，状态是不安全的。
+- 假若找到这样一行，将该进程标记为终止，并将其已分配资源加到 A 中。
+- 重复以上两步，直到所有进程都标记为终止，则状态时安全的。
+
+
+
+
+
+## 内存管理
+
+### 虚拟内存
+
+虚拟内存的目的是为了让物理内存扩充成更大的逻辑内存，从而让程序获得更多的可用内存。
+
+为了更好的管理内存，操作系统将内存抽象成地址空间。每个程序拥有自己的地址空间，这个地址空间被分割成多个块，每一块称为一页。这些页被映射到物理内存，但不需要映射到连续的物理内存，也不需要所有页都必须在物理内存中。当程序引用到不在物理内存中的页时，由硬件执行必要的映射，将缺失的部分装入物理内存并重新执行失败的指令。
+
+从上面的描述中可以看出，虚拟内存允许程序不用将地址空间中的每一页都映射到物理内存，也就是说一个程序不需要全部调入内存就可以运行，这使得有限的内存运行大程序成为可能。例如有一台计算机可以产生 16 位地址，那么一个程序的地址空间范围是 0~64K。该计算机只有 32KB 的物理内存，虚拟内存技术允许该计算机运行一个 64K 大小的程序。
+
+![image-20200903222733058](操作系统.assets/image-20200903222733058.png)
+
+### 内存管理机制
+
+
+
+#### **1.页式管理** 
+
+把主存分为大小相等且固定的一页一页的形式，页较小，相对相比于块式管理的划分力度更大，提高了内存利用率，减少了碎片。页式管理通过页表对应逻辑地址和物理地址。
+
+#### **2.段式管理** 
+
+ 页式管理虽然提高了内存利用率，但是页式管理其中的页实际并无任何实际意义。 段式管理把主存分为一段段的，每一段的空间又要比一页的空间小很多 。但是，最重要的是段是有实际意义的，每个段定义了一组逻辑信息，例如,有主程序段 MAIN、子程序段 X、数据段 D 及栈段 S 等。 段式管理通过段表对应逻辑地址和物理地址
+
+#### **3.段页式管理**   
+
+段页式管理机制结合了段式管理和页式管理的优点。简单来说段页式管理机制就是把主存先分成若干段，每个段又分成若干页，也就是说 **段页式管理机制** 中段与段之间以及段的内部的都是离散的,对于程序员来说看到的是分段,对于系统来说是对段进行的分页 
+
+根据进程段表进行分段,再根据页表查询物理页位置,不存在则通过将外存中的页拉到内存中来
+
+### 快表与多级页表
+
+#### 快表
+
+为了解决虚拟地址到物理地址的转换速度，操作系统在 **页表方案** 基础之上引入了 **快表** 来加速虚拟地址到物理地址的转换。我们可以把快表理解为一种特殊的高速缓冲存储器（Cache），其中的内容是页表的一部分或者全部内容。作为页表的 Cache，它的作用与页表相似，但是提高了访问速率。由于采用页表做地址转换，读写内存数据时 CPU 要访问两次主存。有了快表，有时只要访问一次高速缓冲存储器，一次主存，这样可加速查找并提高指令执行速度。
+
+使用快表之后的地址转换流程是这样的：
+
+1. 根据虚拟地址中的页号查快表；
+2. 如果该页在快表中，直接从快表中读取相应的物理地址；
+3. 如果该页不在快表中，就访问内存中的页表，再从页表中得到物理地址，同时将页表中的该映射表项添加到快表中；
+4. 当快表填满后，又要登记新页时，就按照一定的淘汰策略淘汰掉快表中的一个页。
+
+#### 多级页表
+
+引入多级页表的主要目的是为了避免把全部页表一直放在内存中占用过多空间，特别是那些根本就不需要的页表就不需要保留在内存中,例如64位处理器 将前十位作为一级页表 中间10位二级页表,最后12位为偏移量
+
+
+
+### 页面置换算法
+
+#### 1.LRU 最近未使用 
+
+#### 2.OPT页面置换算法
+
+理想算法,预知未来使用情况
+
+#### 3.FIFO 先进先出
+
+#### 4.LFU 最少使用页面置换算法
+
+
+
+## 磁盘
+
+### 磁盘结构
+
+- 盘面（Platter）：一个磁盘有多个盘面；
+- 磁道（Track）：盘面上的圆形带状区域，一个盘面可以有多个磁道；
+- 扇区（Track Sector）：磁道上的一个弧段，一个磁道可以有多个扇区，它是最小的物理储存单位，目前主要有 512 bytes 与 4 K 两种大小；
+- 磁头（Head）：与盘面非常接近，能够将盘面上的磁场转换为电信号（读），或者将电信号转换为盘面的磁场（写）；
+- 制动手臂（Actuator arm）：用于在磁道之间移动磁头；
+- 主轴（Spindle）：使整个盘面转动。
+
+
+
+### 磁盘调度算法
+
+读写一个磁盘块的时间的影响因素有：
+
+- 旋转时间（主轴转动盘面，使得磁头移动到适当的扇区上）
+- 寻道时间（制动手臂移动，使得磁头移动到适当的磁道上）
+- 实际的数据传输时间
+
+其中，寻道时间最长，因此磁盘调度的主要目标是使磁盘的平均寻道时间最短。
+
+
+
+##### 1.先来先服务
+
+##### 2.最短寻找时间
+
+优先处理与当前磁头最近的磁道
+
+##### 3.电梯算法
+
+磁头只有移动到请求最外侧磁道或最内侧磁道才可以反向移动，如果在磁头移动的方向上已经没有请求，就可以立即改变磁头移动，不必移动到最内/外侧的磁道
+
+##### 4.进阶电梯算法(循环扫描算法)
+
+只有磁头朝某个特定方向移动时才处理磁道访问请求，而**返回时直接快速移动至最靠边缘的并且需要访问的磁道上而不处理任何请求**
+
+
+
+### PageCache和BufferCache
+
+**Page cache**实际上是针对文件系统的,是文件的缓存,在文件层面上的数据会缓存到page cache。文件的逻辑层需要映射到实际的物理磁盘,这种映射关系由文件系统来完成。当page cache的数据需要刷新时,page cache中的数据交给buffer cache,但是这种处理在2.6版本的内核之后就变的很简单了,没有真正意义上的cache操作
+
+**Buffer cache**是针对磁盘块的缓存,也就是在没有文件系统的情况下,直接对磁盘进行操作的数据会缓存到buffer cache中,例如,文件系统的元数据都会缓存到buffer cache中
+
+
+
+### RAID
+
+#### 三大技术
+
+##### 1.镜像
+
+镜像是一种**冗余**技术，为磁盘提供保护功能，防止磁盘发生故障而造成数据丢失。对于 RAID 而言，采用镜像技术 典型地 将会同时在阵列中产生两个完全相同的数据副本，分布在两个不同的磁盘驱动器组上。镜像提供了完全的数据冗余能力，当一个数据副本失效不可用时，外部系统仍可正常访问**另一副本**，不会对应用系统运行和性能产生影响。而且，镜像不需要额外的计算和校验，故障修复非常快，直接复制即可。镜像技术可以从多个副本进行并发读取数据，提供更高的读 I/O 性能，但不能并行写数据，写多个副本会会导致一定的 I/O 性能降低。
+
+　　镜像技术提供了非常高的数据安全性，其代价也是非常昂贵的，需要至少双倍的存储空间。高成本限制了镜像的广泛应用，主要应用于至关重要的数据保护，这种场合下数据丢失会造成巨大的损失。另外，镜像通过“ 拆分 ”能获得特定时间点的上数据快照，从而可以实现一种备份窗口几乎为零的数据备份技术
+
+##### 2.数据条带
+
+　磁盘存储的性能瓶颈在于磁头寻道定位，它是一种慢速机械运动，无法与高速的 CPU 匹配。再者，单个磁盘驱动器性能存在物理极限， I/O 性能非常有限。 RAID 由多块磁盘组成，数据条带技术将数据以块的方式分布存储在多个磁盘中，从而可以对数据进行**并发**处理。这样写入和读取数据就可以在多个磁盘上同时进行，并发产生非常高的聚合 I/O ，有效提高了整体 I/O 性能，而且具有良好的线性扩展性。这对大容量数据尤其显著，如果不分块，数据只能按顺序存储在磁盘阵列的磁盘上，需要时再按顺序读取。而通过条带技术，可获得数倍与顺序访问的性能提升。
+
+　　数据条带技术的分块大小选择非常关键。条带粒度可以是一个字节至几 KB 大小，分块越小，并行处理能力就越强，数据存取速度就越高，但同时就会增加块存取的随机性和块寻址时间。实际应用中，要根据数据特征和需求来选择合适的分块大小，在数据存取随机性和并发处理能力之间进行平衡，以争取尽可能高的整体性能。
+数据条带是基于提高 I/O 性能而提出的，也就是说它只关注性能， 而对数据可靠性、可用性没有任何改善。实际上，其中任何一个数据条带损坏都会导致整个数据不可用，采用数据条带技术反而增加了数据发生丢失的概念率
+
+##### 3.数据校验
+
+​		镜像具有高安全性、高读性能，但冗余开销太昂贵。数据条带通过并发性来大幅提高性能，然而对数据安全性、可靠性未作考虑。数据校验是一种冗余技术，它用校验数据来提供数据的安全，可以检测数据错误，并在能力允许的前提下进行数据重构。相对镜像，数据校验大幅缩减了冗余开销，用较小的代价换取了极佳的数据完整性和可靠性。数据条带技术提供高性能，数据校验提供数据安全性， RAID 不同等级往往同时结合使用这两种技术。
+
+　　采用数据校验时， RAID 要在写入数据同时进行校验计算，并将得到的校验数据存储在 RAID 成员磁盘中。校验数据可以集中保存在某个磁盘或分散存储在多个不同磁盘中，甚至校验数据也可以分块，不同 RAID 等级实现各不相同。当其中一部分数据出错时，就可以对剩余数据和校验数据进行反校验计算重建丢失的数据。校验技术相对于镜像技术的优势在于节省大量开销，但由于每次数据读写都要进行大量的校验运算，对计算机的运算速度要求很高，必须使用硬件 RAID 控制器。在数据重建恢复方面，检验技术比镜像技术复杂得多且慢得多。
+
+​		**海明校验码**和 **异或校验**是两种最为常用的 数据校验算法。海明校验码是由理查德.海明提出的，不仅能检测错误，还能给出错误位置并自动纠正。海明校验的基本思想是：将有效信息按照某种规律分成若干组，对每一个组作奇偶测试并安排一个校验位，从而能提供多位检错信息，以定位错误点并纠正。可见海明校验实质上是一种多重奇偶校验。异或校验通过异或逻辑运算产生，将一个有效信息与一个给定的初始值进行异或运算，会得到校验信息。如果有效信息出现错误，通过校验信息与初始值的异或运算能还原正确的有效信息。
+
+#### RaID0
+
+![image-20200905103640096](操作系统.assets/image-20200905103640096.png)
+
+RAID0 是一种简单的、无数据校验的数据条带化技术,无校验不可靠,提升性能
+
+
+
+#### RAID1
+
+![image-20200905103742317](操作系统.assets/image-20200905103742317.png)
+
+RAID1 称为镜像，它将数据完全一致地分别写到工作磁盘和镜像 磁盘，它的磁盘空间利用率为 50% 
+
+#### **RAID2**
+
+RAID2 称为纠错海明码磁盘阵列，其设计思想是利用海明码实现数据校验冗余,海明码是一种在原始数据中加入若干校验码来进行错误检测和纠正的编码技术
+
+![image-20200905104152708](操作系统.assets/image-20200905104152708.png)
+
+
+
+#### RAID3
+
+RAID3 是使用专用校验盘的并行访问阵列，它采用一个专用的磁盘作为校验盘，其余磁盘作为数据盘，数据按**位可字节的方式交叉**存储到各个数据盘中。RAID3 至少需要三块磁盘，不同磁盘上同一带区的数据作 XOR 校验，校验值写入校验盘中
+
+![image-20200905104330224](操作系统.assets/image-20200905104330224.png)
+
+#### **RAID4**
+
+RAID4 与 RAID3 的原理大致相同，区别在于条带化的方式不同。 RAID4 按照 **块**的方式来组织数据，写操作只涉及当前数据盘和校验盘两个盘，多个 I/O 请求可以同时得到处理，提高了系统性能。
+
+![image-20200905105206029](操作系统.assets/image-20200905105206029.png)
+
+#### RAID5
+
+ RAID5 应该是目前最常见的 RAID 等级，它的原理与 RAID4 相似，区别在于校验数据分布在阵列中的所有磁盘上，而没有采用专门的校验磁盘。对于数据和校验数据，它们的写操作可以同时发生在完全不同的磁盘上。因此， RAID5 不存在 RAID4 中的并发写操作时的校验盘性能瓶颈问题
+
+![image-20200905105330175](操作系统.assets/image-20200905105330175.png)
+
+#### RAID6
+
+前面所述的各个 RAID 等级都只能保护因单个磁盘失效而造成的数据丢失。如果两个磁盘同时发生故障，数据将无法恢复。 RAID6 引入双重校验的概念，它可以保护阵列中同时出现两个磁盘失效时，阵列仍能够继续工作，不会发生数据丢失
+
+![image-20200905105422526](操作系统.assets/image-20200905105422526.png)
+
+#### RAID组合
+
+##### RAID00
+
+简单地说， RAID00 是由多个成员 RAID0 组成的高级 RAID0 。它与 RAID0 的区别在于， RAID0 阵列替换了原先的成员磁盘。可以把 RAID00 理解为两层条带化结构的磁盘阵列，即对条带再进行条带化。这种阵列可以提供更大的存储容量、更高的 I/O 性能和更好的 I/O 负均衡
+
+##### RAID01和RAID10
+
+RAID01 是先做条带化再作镜像，本质是对物理磁盘实现镜像；而 RAID10 是先做镜像再作条带化，是对虚拟磁盘实现镜像
+
+![image-20200905105733671](操作系统.assets/image-20200905105733671.png)
+
+### 文件系统格式
+
+#### Ext
+
+全称Linux extended file system, extfs，即Linux扩展文件系统，Ext2就代表第二代文件扩展系统，Ext3/Ext4以此类推，它们都是Ext2的升级版，只不过为了快速恢复文件系统，减少一致性检查的时间，增加了日志功能，所以Ext2被称为**索引式文件系统**，而Ext3/Ext4被称为**日志式文件系统**
+
+
+
+#### inode
+
+记录文件的权限、属性和数据所在块`block`的号码，每个文件都有且仅有一个的`inode`，每个`inode`都有自己的编号，可以把`inode`简单地理解为**文档索引**
+
+#### inode table
+
+存储文件系统的所有inode编号的表格
+
+#### block(数据区块)
+
+存储的文件内容，也叫数据区块(data block)，每个`block`都有自己的编号，`Ext2`支持的单位`block`容量仅为**1k、2k、4k**。
