--- a/docs/basicCourse/计算机网络.md
+++ b/docs/basicCourse/计算机网络.md
@@ -75,6 +75,40 @@ ping 是基于 ICMP 协议工作的。ICMP 全称 Internet Control Message Proto
 
 #### TCP
 
+##### 报文格式
+
+![image-20200914164923707](计算机网络.assets/image-20200914164923707.png)
+
+TCP报头中的源端口号和目的端口号同IP数据报中的源IP与目的IP唯一确定一条TCP连接
+
+**序号**（4字节=32位）：
+
+用来标识TCP发端向TCP收端发送的数据字节流**确认序号**（4字节=32位）：
+
+  由于该报文为SYN报文，ACK标志为0，故没有确认序号（ACK标志为1时确认序号才有效）TCP协议规定，只有ACK=1时有效，也规定连接建立后所有发送的报文的ACK必须为1
+
+**头部长度**：该字段占用4位，用来表示报文首部的长度，单位是4Byte。如：headLen = ((packet[12]>>4)&0x0F)*4;
+
+**预留6位**：长度为6位，作为保留字段，暂时没有什么用处。
+
+**URG**：长1位，表示紧急指针字段有效；
+
+**ACK**：长1位，置位表示确认号字段有效；TCP协议规定，只有ACK=1时有效，也规定连接建立后所有发送的报文的ACK必须为1
+
+**PSH**：长1位，表示当前报文需要请求推（push）操作；
+
+**RST**：长1位，置位表示复位TCP连接；
+
+**SYN**：长1位，在连接建立时用来同步序号。当SYN=1而ACK=0时，表明这是一个连接请求报文。对方若同意建立连接，则应在响应报文中使SYN=1和ACK=1. 因此,SYN置1就表示这是一个连接请求或连接接受报文。
+
+**FIN**：长1位，用于释放TCP连接时标识发送方比特流结束；即完，终结的意思， 用来释放一个连接。当 FIN = 1时，表明此报文段的发送方的数据已经发送完毕，并要求释放连接。
+
+**窗口大小**：长度为16位，2个字节。
+
+**校验和**：长度为16位，2个字节。
+
+**紧急指针**：长度为16位，2个字节。
+
 ##### 三次握手
 
 ![image-20200909160038748](计算机网络.assets/image-20200909160038748.png)
