--- a/docs/basicCourse/数据结构.md
+++ b/docs/basicCourse/数据结构.md
@@ -152,3 +152,32 @@ O（n^2）
 **基数排序基本思想:**
 
 是按照低位先排序，然后收集；再按照高位排序，然后再收集；依次类推，直到最高位。有时候有些属性是有优先级顺序的，先按低优先级排序，再按高优先级排序。最后的次序就是高优先级高的在前，高优先级相同的低优先级高的在前。基数排序基于分别排序，分别收集，所以是稳定的。
+
+### 图算法
+
+#### 最小生成树
+
+##### **1.Kruskal算法**
+
+此算法可以称为“加边法”，初始最小生成树边数为0，每迭代一次就选择一条满足条件的最小代价边，加入到最小生成树的边集合里。
+
+1. 把图中的所有边按代价从小到大排序；
+2. 把图中的n个顶点看成独立的n棵树组成的森林；
+3. 按权值从小到大选择边，所选的边连接的两个顶点ui,viui,vi,应属于两颗不同的树，则成为最小生成树的一条边，并将这两颗树合并作为一颗树。
+4. 重复(3),直到所有顶点都在一颗树内或者有n-1条边为止。
+
+E个节点V条边,时间复杂度O(ElogV)
+
+##### **2.Prim算法**
+
+此算法可以称为“加点法”，每次迭代选择代价最小的边对应的点，加入到最小生成树中。算法从某一个顶点s开始，逐渐长大覆盖整个连通网的所有顶点。
+
+1. 图的所有顶点集合为VV；初始令集合u={s},v=V−uu={s},v=V−u;
+2. 在两个集合u,vu,v能够组成的边中，选择一条代价最小的边(u0,v0)(u0,v0)，加入到最小生成树中，并把v0v0并入到集合u中。
+3. 重复上述步骤，直到最小生成树有n-1条边或者n个顶点为止。
+
+由于不断向集合u中加点，所以最小代价边必须同步更新；需要建立一个辅助数组closedge,用来维护集合v中每个顶点与集合u中最小代价边信息
+
+E个节点V条边,时间复杂度O(ElogV)
+
+##### 
