--- a/docs/basicCourse/数据库.md
+++ b/docs/basicCourse/数据库.md
@@ -338,6 +338,12 @@ Innodb 的锁的策略为 next-key 锁，即 record lock + gap lock ，是通过
 
 `redo log`的存在为了：当我们修改的时候，写完内存了，但数据还没真正写到磁盘的时候。此时我们的数据库挂了，我们可以根据`redo log`来对数据进行恢复。因为`redo log`是顺序IO，所以**写入的速度很快**，并且`redo log`记载的是物理变化（xxxx页做了xxx修改），文件的体积很小，**恢复速度很快**
 
+![img](数据库.assets/8561045-94b94fcc685ce0f2.webp)
+
+write pos 是当前记录的位置，一边写一边后移，写到第 3 号文件末尾后就回到 0 号文件开头。checkpoint 是当前要擦除的位置，也是往后推移并且循环的，擦除记录前要把记录更新到数据文件。write pos 和 checkpoint 之间的是还空着的部分，可以用来记录新的操作。如果 write pos 追上 checkpoint，表示redo log满了，这时候不能再执行新的更新，得停下来先擦掉一些记录，把 checkpoint 推进一下。有了 redo log，InnoDB 就可以保证即使数据库发生异常重启，之前提交的记录都不会丢失，这个能力称为 **crash-safe**
+
+
+
 
 
 #### BinLog和RedoLog的区别
@@ -358,6 +364,34 @@ Innodb 的锁的策略为 next-key 锁，即 record lock + gap lock ，是通过
 - 如果整个数据库的数据都被删除了，`binlog`存储着所有的数据变更情况，那么可以通过`binlog`来对数据进行恢复
 
 因为功能的不同，`redo log` 存储的是物理数据的变更，如果我们内存的数据已经刷到了磁盘了，那`redo log`的数据就无效了。所以`redo log`不会存储着**历史**所有数据的变更，**文件的内容会被覆盖的**
+
+#### 两阶段提交
+
+prepare：redolog写入log buffer，并fsync持久化到磁盘，在redolog事务中记录2PC的XID，在redolog事务打上prepare标识
+commit：binlog写入log buffer，并fsync持久化到磁盘，在binlog事务中记录2PC的XID，同时在redolog事务打上commit标识
+
+#### redolog和binlog二阶段提交与redolog和binlog的顺序提交是否真的有区别
+
+如果redolog和binlog顺序提交，则具体步骤会如下：
+
+1. redolog刷入cache并fsync刷盘，并打上commit标识
+2. binlog刷入cache并fsync刷盘
+
+类比begin…commit和begin…rollback，commit和rollback这两个操作是只能二选一，且一旦commit则不能再rollback。同样，redolog中的事务一旦打上commit标识，是无法回退的，否则有可能覆盖其他事务的更新（例如A事务对某一行进行了插入并打上commit标识，而B事务紧接着对该行进行了修改，最后A事务突然回滚B事务，则B事务的操作被强制覆盖，这是不妥的）。如果redolog进行了commit，而此时数据库crash导致binlog刷盘失败，redolog无法回滚，会造成redolog和binlog不一致。
+
+但是通过事务可以同时提交redolog和binlog，两者落盘之后都会记录2PC事务的XID（redolog和binlog中事务落盘的标识），若中途数据库crash，通过XID关联两者并在恢复时决定commit和rollback与否，详细步骤见下一段“恢复步骤”
+
+#### 恢复步骤
+
+redolog中的事务如果经历了二阶段提交中的prepare阶段，则会打上prepare标识，如果经历commit阶段，则会打上commit标识（此时redolog和binlog均已落盘）。
+
+Step1. 按顺序扫描redolog，如果redolog中的事务既有prepare标识，又有commit标识，就直接提交（复制redolog disk中的数据页到磁盘数据页）
+
+Step2 .如果redolog事务只有prepare标识，没有commit标识，则说明当前事务在commit阶段crash了，binlog中当前事务是否完整未可知，此时拿着redolog中当前事务的XID（redolog和binlog中事务落盘的标识），去查看binlog中是否存在此XID
+
+ a. 如果binlog中有当前事务的XID，则提交事务（复制redolog disk中的数据页到磁盘数据页）
+
+ b. 如果binlog中没有当前事务的XID，则回滚事务（使用undolog来删除redolog中的对应事务）
 
 
 
