--- a/docs/basicCourse/计算机网络.md
+++ b/docs/basicCourse/计算机网络.md
@@ -376,7 +376,7 @@ UDP（User Data Protocol，用户数据报协议），是与 TCP 相对应的协
 - 5、消息传递
 - 6、Host 头域
 - 7、错误提示
-- 8、内容协商
+- 8、内容协商。
 
 ##### HTTP 和 HTTPS 的区别？
 
@@ -395,11 +395,12 @@ UDP（User Data Protocol，用户数据报协议），是与 TCP 相对应的协
 - 1、客户端向服务端发送 SSL 协议版本号、加密算法种类、随机数等信息。
 - 2、服务端给客户端返回 SSL 协议版本号、加密算法种类、随机数等信息，同时也返回用服务器端的证书，即**公钥证书**(权威机构私钥加密)。
 - 3、客户端使用服务端返回的信息验证服务器的合法性，包括：
+  
   - 证书是否过期。
   - 发型服务器证书的 CA 是否可靠。
   - 返回的公钥是否能正确解开返回证书中的数字签名。
-  - 服务器证书上的域名是否和服务器的实际域名相匹配。
-
+- 服务器证书上的域名是否和服务器的实际域名相匹配。
+  
 - 4、客户端向服务端发送自己所能支持的对称加密方案，供服务器端进行选择。
 
   5、服务器端在客户端提供的加密方案中选择加密程度最高的加密方式。
