--- a/docs/basicCourse/操作系统.md
+++ b/docs/basicCourse/操作系统.md
@@ -892,9 +892,40 @@ int main()
 
 #### 4.LFU 最少使用页面置换算法
 
+### CPU cache
 
+#### 什么是Cache
 
-## 磁盘
+Cache是用来对内存数据的缓存。
+
+CPU要访问的数据在Cache中有缓存，称为“命中” (Hit)，反之则称为“缺失” (Miss)。
+
+CPU访问它的速度介于寄存器与内存之间（数量级的差别）。实现Cache的花费介于寄存器与内存之间。
+
+CPU缓存（Cache Memory）位于CPU与内存之间的临时存储器，它的容量比内存小但交换速度快。在缓存中的数据是内存中的一小部分，但这一小部分是短时间内CPU即将访问的，当CPU调用大量数据时，就可避开内存直接从缓存中调用，从而加快读取速度。
+
+下图是一个典型的存储器层次结构，我们可以看到一共使用了三级缓存
+
+#### ![image-20200919113205590](操作系统.assets/image-20200919113205590.png)为什么要有多级CPU cache
+
+随着科技发展，热点数据的体积越来越大，单纯的增加一级缓存大小的性价比已经很低了
+二级缓存就是一级缓存的缓冲器：一级缓存制造成本很高因此它的容量有限，二级缓存的作用就是存储那些CPU处理时需要用到、一级缓存又无法存储的数据。
+同样道理，三级缓存和内存可以看作是二级缓存的缓冲器，它们的容量递增，但单位制造成本却递减。
+另外需要注意的是，L3 Cache和L1，L2 Cache有着本质的区别。，L1和L2 Cache都是每个CPU core独立拥有一个，而L3 Cache是几个Cores共享的，可以认为是一个更小但是更快的内存。
+
+#### cpu与cache 内存交互的过程
+
+CPU接收到指令后，它会最先向CPU中的一级缓存（L1 Cache）去寻找相关的数据，然一级缓存是与CPU同频运行的，但是由于容量较小，所以不可能每次都命中。这时CPU会继续向下一级的二级缓存（L2 Cache）寻找，同样的道理，当所需要的数据在二级缓存中也没有的话，会继续转向L3 Cache、内存(主存)和硬盘.
+
+程序运行时可以使用perf工具观察cache-miss的rate.
+
+#### 什么是Cache Line
+
+Cache Line可以简单的理解为CPU Cache中的最小缓存单位。
+
+#### CPU缓存一致性
+
+多个处理器对某个内存块同时读写，会引起冲突的问题，这也被称为Cache一致性问题。
 
 ### 磁盘结构
 
@@ -904,6 +935,58 @@ int main()
 - 磁头（Head）：与盘面非常接近，能够将盘面上的磁场转换为电信号（读），或者将电信号转换为盘面的磁场（写）；
 - 制动手臂（Actuator arm）：用于在磁道之间移动磁头；
 - 主轴（Spindle）：使整个盘面转动。
+
+### 磁盘格式化
+
+#### 1.低级格式化
+
+划分扇区(512B) 
+
+控制信息 1.Sector 2.ECC (纠错码)
+
+#### 2.高级格式化
+
+构建文件系统
+
+#### 文件定义
+
+文件时信息的逻辑存储单位
+
+- 用户看来,文件时具有结构的信息集合
+- 系统看来,文件的本质是存储在外存当中的二进制集合
+
+#### 文件属性
+
+- 文件名
+- 文件类型  
+  - 文本文件
+  - 二进制可执行文件    
+- 位置
+- 大小
+- 时间,日期和用户标识
+- 保护
+
+#### 文件内部结构
+
+![image-20200922100426587](操作系统.assets/image-20200922100426587.png)
+
+#### 访问方法
+
+##### 顺序访问
+
+![image-20200922100832281](操作系统.assets/image-20200922100832281.png)
+
+##### 直接访问
+
+若文件的逻辑记录的长度固定,那么允许在访问文件信息时可按任意顺序进行快速读取和写入
+
+#### 目录
+
+  ![image-20200922101639601](操作系统.assets/image-20200922101639601.png) 
+
+#### Linux文件系统
+
+![image-20200922105746850](操作系统.assets/image-20200922105746850.png)
 
 
 
