--- a/docs/basicCourse/计算机网络.md
+++ b/docs/basicCourse/计算机网络.md
@@ -397,7 +397,7 @@ UDP（User Data Protocol，用户数据报协议），是与 TCP 相对应的协
 - 3、客户端使用服务端返回的信息验证服务器的合法性，包括：
   - 证书是否过期。
   - 发型服务器证书的 CA 是否可靠。
-  - 返回的公钥是否能正确解开返回证书中的数字签名。
+  - 公钥是否能正确解开返回证书中的数字签名并保证没有被篡改过。
   - 服务器证书上的域名是否和服务器的实际域名相匹配。
 
 - 4、客户端向服务端发送自己所能支持的对称加密方案，供服务器端进行选择。
